# intelligencebox-plugins

./: .gitignore  content_scan_output.json  vercel.json
.github/workflows/: build-and-publish.yml
registry-api/: .gitignore  .vercelignore  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
registry-api/app/: layout.tsx  page.tsx
registry-api/app/admin/: page.tsx
registry-api/app/api/: route.ts
registry-api/app/api/admin/registry/: route.ts
registry-api/app/api/admin/registry/[id]/: route.ts
registry-api/app/api/categories/: route.ts
registry-api/app/api/health/: route.ts
registry-api/app/api/registry/: route.ts
registry-api/app/api/registry/[id]/: route.ts
registry-api/app/api/registry/[id]/manifest/: route.ts
registry-api/app/api/search/: route.ts
registry-api/app/registry/: page.tsx
registry-api/lib/: auth.ts  manifest.ts  mongodb.ts
registry-api/src/: index.ts
servers/mcp-checkcorporate-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  manifest.json  mcp-checkcorporate-server.pyproj  pyproject.toml  requirements.txt  test.py  test_client_mcp.py
servers/mcp-checkcorporate-server/src/checkcorporate_server/: __init__.py  __main__.py  db_tools.py  server.py
servers/mcp-document-generator/: Dockerfile  manifest.json  manifets.json  pyproject.toml  requirements.txt
servers/mcp-document-generator/output/: La_Chiave_dei_Sogni.docx  appunti_riunione.docx  contratto_vendita_carta.docx  viaggio_nel_tempo.docx
servers/mcp-document-generator/src/document_generator/: __init__.py  __main__.py  server.py  sse_server.py
servers/mcp-docx-generator/: Dockerfile  requirements.txt
servers/mcp-drafting-assistant/: Dockerfile  manifest.json  pyproject.toml  requirements.txt
servers/mcp-drafting-assistant/src/drafting_assistant/: __init__.py  __main__.py  chatbox.py  pipeline.py  recupero_atto.py  server.py  sse_server.py  step1.py  step1_3.py  step1_4.py  step3.py
servers/mcp-gmail-server/: Dockerfile  manifest.json  pyproject.toml  requirements.txt
servers/mcp-gmail-server/src/gmail_server/: __init__.py  __main__.py  gmail_tools.py  google_api.py  server.py  sse_server.py
servers/mcp-schematics-wirelist-server/: Dockerfile  README.md  debug-extraction-graph.dot  debug-extraction-graph.html  debug-extraction-graph.json  manifest.json  package-lock.json  package.json
servers/mcp-schematics-wirelist-server/src/: extraction.ts  index.ts  schema.ts
servers/mcp-verifica-codici/: Dockerfile  TESTING_GUIDE.md  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
servers/mcp-verifica-codici/src/: compareCodici.ts  index.ts  metadataClient.ts  schema.ts
servers/mcp-verifica-codici/src/verifica_codici/: __init__.py  __main__.py  code_extractor_folders.py  master_list_parser.py  script1.py  script2.py  script3.py  script4.py  script5.py  server.py  sse_server.py
src/verifica_codici/: rag_client.py
