[project]
name = "checkcorporate_server"
version = "0.1.0"
description = "MCP server mock per bilancio e piano dei conti (renamed)"
# Richiede Python 3.11.9 o successivi
requires-python = ">=3.11.9"

dependencies = [
    "mcp~=1.1.3",
    "pydantic==2.8.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
