[project]
name = "document_generator"
version = "0.1.0"
description = "Un server MCP per generare file PDF e DOCX da un testo in Markdown."
requires-python = "~=3.12"

dependencies = [
    # Dipendenze comuni per MCP e Pydantic
    "mcp~=1.1.3",
    "anyio",
    "sniffio",
    "idna",
    "jsonschema",
    "jsonschema-specifications",
    "referencing",
    "rpds-py",
    "attrs",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "annotated-types",
    "typing_extensions",

    # Dipendenze per la generazione PDF
    "reportlab",
    "Pillow",
    "xhtml2pdf",
    "markdown2",

    # Dipendenza per la generazione DOCX
    "pypandoc",

    # Dipendenze per il server web
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"