[project]
name = "gmail_server"
version = "0.1.0"
description = "Un server MCP per comunicare con Gmail tramite le API di Google."
requires-python = "~=3.12"

dependencies = [
    # Dipendenze comuni per MCP
    "mcp~=1.1.3",
    "anyio",
    "sniffio",
    "idna",
    "jsonschema",
    "jsonschema-specifications",
    "referencing",
    "rpds-py",
    "attrs",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "annotated-types",
    "typing_extensions",

    # === NUOVE DIPENDENZE PER L'API DI GOOGLE ===
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib"

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"